// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-InfoIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-InfoIcon-background"
    cx="8"
    cy="8"
    r="8"
  />
  <rect
    className="lucid-InfoIcon-mark"
    height="2"
    width="2"
    x="7"
    y="3"
  />
  <rect
    className="lucid-InfoIcon-mark"
    height="7"
    width="2"
    x="7"
    y="6"
  />
</Icon>
`;

exports[`InfoIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-InfoIcon lucid-InfoIcon-is-clickable"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-InfoIcon-background"
    cx="8"
    cy="8"
    r="8"
  />
  <rect
    className="lucid-InfoIcon-mark"
    height="2"
    width="2"
    x="7"
    y="3"
  />
  <rect
    className="lucid-InfoIcon-mark"
    height="7"
    width="2"
    x="7"
    y="6"
  />
</Icon>
`;

exports[`InfoIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-InfoIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-InfoIcon-background lucid-InfoIcon-background-is-disabled"
    cx="8"
    cy="8"
    r="8"
  />
  <rect
    className="lucid-InfoIcon-mark"
    height="2"
    width="2"
    x="7"
    y="3"
  />
  <rect
    className="lucid-InfoIcon-mark"
    height="7"
    width="2"
    x="7"
    y="6"
  />
</Icon>
`;
